Finished with GUI. Not all functional.